tests/src/frontend/typechecking/invalid/same_tparams_7.sk
mutable class Foo<T>(mutable v: T)
fun no<T>(x: mutable Foo<T>): mutable Foo<T> {
  mutable Foo(freeze(x).v)
}
